--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,21 @@
 language: php
+sudo: false
 
 php:
   - 5.4
   - 5.5
   - 5.6
+  - 7
   - hhvm
 
 matrix:
   allow_failures:
+    - php: 7
     - php: hhvm
 
 before_script:
   - composer self-update
-  - composer install --dev --prefer-source
+  - composer install -o --prefer-source
 
 script:
   - phpunit --coverage-text --coverage-clover=coverage.clover --colors --verbose
