--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
         "browscap/browscap-php": "*@dev"
     },
     "require-dev": {
-        "symfony/symfony": ">=2.1,<=2.5"
+        "phpunit/phpunit": "*",
+        "symfony/symfony": "~2"
     },
     "license": "MIT",
-    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Joshua Estes",
