--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,52 @@
 language: php
 
+sudo: false
+
+cache:
+    directories:
+        - $HOME/.composer/cache
+
 php:
+  - 5.3
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
 
-matrix:
-  allow_failures:
-    - php: hhvm
+env:
+    global:
+        - TEST_COMMAND="phpunit"
+    matrix:
+        - SYMFONY_VERSION=2.8.*
 
-before_script:
-  - composer self-update
-  - composer install --dev --prefer-source
+matrix:
+    fast_finish: true
+    allow_failures:
+        - php: hhvm
+
+    include:
+        - php: 5.3
+          env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_VERSION=2.3.* COVERAGE=true TEST_COMMAND="phpunit --coverage-text --coverage-clover=build/coverage.xml"
+        - php: 5.6
+          env: SYMFONY_VERSION=2.3.*
+        - php: 5.6
+          env: SYMFONY_VERSION=2.7.*
+        - php: 5.6
+          env: SYMFONY_VERSION=3.0.*
+
+before_install:
+    - travis_retry composer self-update
+    - if [[ ! $PHP = hhvm* ]]; then INI_FILE=~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; else INI_FILE=/etc/hhvm/php.ini; fi
+    - if [[ ! $PHP = hhvm* ]]; then echo memory_limit = -1 >> $INI_FILE; fi
+
+install:
+    - composer require symfony/symfony:${SYMFONY_VERSION} --no-update
+    - composer update ${COMPOSER_FLAGS} --prefer-source --no-interaction
 
 script:
-  - phpunit --coverage-text --coverage-clover=coverage.clover --colors --verbose
+    - $TEST_COMMAND
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
   - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
-
