--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "symfony-bundle",
     "require": {
         "php": ">=5.3.3",
-        "browscap/browscap-php": "*@dev"
+        "browscap/browscap-php": "~2.0"
     },
     "require-dev": {
         "symfony/symfony": ">=2.1,<=2.5"
