--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,68 @@
 language: php
+sudo: false
 
 php:
   - 5.4
   - 5.5
   - 5.6
   - 7.0
-  - hhvm
+  - 7.1
+  - 7.2
 
-matrix:
-  allow_failures:
-    - php: 7.0
-    - php: hhvm
+os: linux
 
-before_script:
-  - composer self-update
-  - composer install --dev --prefer-source
+env:
+  - COMPOSER_FLAGS="--prefer-lowest"
+  - COMPOSER_FLAGS=""
+
+cache:
+  directories:
+    - $TRAVIS_BUILD_DIR/resources
+    - $HOME/.composer/cache
+
+before_install:
+  - .travis-scripts/cache-browscap.sh
+  - phpenv config-rm xdebug.ini || echo "xdebug was not installed"
+  - echo 'opcache.enable=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - echo 'opcache.enable_cli=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - travis_retry composer self-update
+
+install: travis_retry composer update --optimize-autoloader --prefer-dist --prefer-stable --no-progress --no-interaction -vv $COMPOSER_FLAGS
 
 script:
-  - phpunit --coverage-text --coverage-clover=coverage.clover --colors --verbose
+  - composer validate
+  - php -d browscap=$TRAVIS_BUILD_DIR/resources/browscap.ini vendor/bin/phpunit --no-coverage --colors --verbose
 
-after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
-
+jobs:
+  fast_finish: true
+  allow_failures:
+    - php: 7.2
+    - php: nightly
+  include:
+    - php: 7.2
+      env: COMPOSER_FLAGS="--ignore-platform-reqs"
+    - php: nightly
+      env: COMPOSER_FLAGS="--ignore-platform-reqs"
+    - stage: test with coverage
+      php: 7.1
+      env:
+        - COVERAGE=yes
+        - COMPOSER_FLAGS=""
+      before_install:
+        - .travis-scripts/cache-browscap.sh
+        - echo 'opcache.enable=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+        - echo 'opcache.enable_cli=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+        - travis_retry composer self-update
+      script: php -d browscap=$TRAVIS_BUILD_DIR/resources/browscap.ini vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover --colors --verbose
+      after_success:
+        - wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+    - stage: check coding style
+      php: 7.1
+      env: COMPOSER_FLAGS=""
+      script:
+        - vendor/bin/phpcs
+        - php -n -d memory_limit=768M vendor/bin/php-cs-fixer fix --dry-run -vv
+    - stage: static code analysis
+      php: 7.1
+      env: COMPOSER_FLAGS=""
+      script: vendor/bin/phpstan analyse -l 7 -c phpstan.neon --autoload-file=vendor/autoload.php --memory-limit=768M --no-progress src tests
