--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ os: linux
 
 env:
   - COMPOSER_FLAGS="--prefer-lowest"
-    SYMFONY_VERSION="^2.0 || ^3.0"
+    SYMFONY_VERSION="^2.0||^3.0"
   - COMPOSER_FLAGS=""
-    SYMFONY_VERSION="^2.0 || ^3.0"
+    SYMFONY_VERSION="^2.0||^3.0"
 
 cache:
   directories:
@@ -45,28 +45,37 @@ jobs:
   include:
     - php: 5.3
       env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="^2.0 || ^3.0"
+           SYMFONY_VERSION="^2.0||^3.0"
       dist: precise
     - php: nightly
       env: COMPOSER_FLAGS="--ignore-platform-reqs"
     - php: 7.1
       env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="^2.3.0"
+           SYMFONY_VERSION="~2.3.0"
     - php: 7.1
       env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="^2.7.0"
+           SYMFONY_VERSION="~2.4.0"
+    - php: 7.1
+      env: COMPOSER_FLAGS=""
+           SYMFONY_VERSION="~2.5.0"
+    - php: 7.1
+      env: COMPOSER_FLAGS=""
+           SYMFONY_VERSION="~2.6.0"
+    - php: 7.1
+      env: COMPOSER_FLAGS=""
+           SYMFONY_VERSION="~2.7.0"
     - php: 7.1
       env: COMPOSER_FLAGS=""
            SYMFONY_VERSION="^2.8.0"
     - php: 7.1
       env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="^3.0.0"
+           SYMFONY_VERSION="~3.0.0"
     - php: 7.1
       env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="^3.1.0"
+           SYMFONY_VERSION="~3.1.0"
     - php: 7.1
       env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="^3.2.0"
+           SYMFONY_VERSION="~3.2.0"
     - php: 7.1
       env: COMPOSER_FLAGS=""
            SYMFONY_VERSION="^3.3.0"
@@ -75,7 +84,7 @@ jobs:
       env:
         - COVERAGE=yes
         - COMPOSER_FLAGS=""
-        - SYMFONY_VERSION="^2.0 || ^3.0"
+        - SYMFONY_VERSION="^2.0||^3.0"
       before_install:
         - .travis-scripts/cache-browscap.sh
         - echo 'opcache.enable=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
