--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,12 @@
   "type": "symfony-bundle",
   "require": {
     "php": "^5.3.3 || ^7.0",
+    "symfony/symfony": "^2.3 || ^3.0",
     "symfony/framework-bundle": "^2.3 || ^3.0",
     "browscap/browscap-php": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "*",
-    "squizlabs/php_codesniffer": "^3.0",
-    "friendsofphp/php-cs-fixer": "^2.7",
-    "phpstan/phpstan": "^0.8.5",
-    "symfony/symfony": "^2.3 || ^3.0"
+    "phpunit/phpunit": "*"
   },
   "license": "MIT",
   "authors": [
