--- a/.travis.yml
+++ b/.travis.yml
@@ -31,11 +31,11 @@ before_install:
 install:
   - php composer.phar require symfony/symfony:${SYMFONY_VERSION} --no-update
   - php composer.phar require symfony/framework-bundle:${SYMFONY_VERSION} --no-update
-  - php -d memory_limit=-1 composer.phar update --optimize-autoloader --prefer-dist --prefer-stable --no-progress --no-interaction --no-suggest --no-dev $COMPOSER_FLAGS -vv
+  - php -d memory_limit=-1 composer.phar update --optimize-autoloader --prefer-dist --prefer-stable --no-progress --no-interaction --no-suggest $COMPOSER_FLAGS -vv
 
 script:
   - php composer.phar validate
-  - wget https://phar.phpunit.de/phpunit-6.4.3.phar && php -d browscap=$TRAVIS_BUILD_DIR/resources/browscap.ini phpunit-6.4.3.phar --no-coverage --colors --verbose
+  - vendor/bin/phpunit --no-coverage --colors --verbose
 
 jobs:
   fast_finish: true
@@ -43,53 +43,43 @@ jobs:
     - php: nightly
   include:
     - php: 5.3
-      env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="^2.0||^3.0"
+      env: SYMFONY_VERSION="^2.0||^3.0"
+           COMPOSER_FLAGS="--prefer-lowest"
+      dist: precise
+    - php: 5.3
+      env: SYMFONY_VERSION="^2.0||^3.0"
       dist: precise
     - php: nightly
       env: COMPOSER_FLAGS="--ignore-platform-reqs"
     - php: 7.1
-      env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="~2.3.0"
+      env: SYMFONY_VERSION="~2.3.0"
     - php: 7.1
-      env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="~2.4.0"
+      env: SYMFONY_VERSION="~2.4.0"
     - php: 7.1
-      env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="~2.5.0"
+      env: SYMFONY_VERSION="~2.5.0"
     - php: 7.1
-      env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="~2.6.0"
+      env: SYMFONY_VERSION="~2.6.0"
     - php: 7.1
-      env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="~2.7.0"
+      env: SYMFONY_VERSION="~2.7.0"
     - php: 7.1
-      env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="^2.8.0"
+      env: SYMFONY_VERSION="^2.8.0"
     - php: 7.1
-      env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="~3.0.0"
+      env: SYMFONY_VERSION="~3.0.0"
     - php: 7.1
-      env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="~3.1.0"
+      env: SYMFONY_VERSION="~3.1.0"
     - php: 7.1
-      env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="~3.2.0"
+      env: SYMFONY_VERSION="~3.2.0"
     - php: 7.1
-      env: COMPOSER_FLAGS=""
-           SYMFONY_VERSION="^3.3.0"
+      env: SYMFONY_VERSION="^3.3.0"
     - stage: test with coverage
       php: 7.1
-      env:
-        - COVERAGE=yes
-        - COMPOSER_FLAGS=""
-        - SYMFONY_VERSION="^2.0||^3.0"
+      env: SYMFONY_VERSION="^2.0||^3.0"
       before_install:
         - .travis-scripts/cache-browscap.sh
         - echo 'opcache.enable=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
         - echo 'opcache.enable_cli=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
         - wget https://github.com/composer/composer/releases/download/1.5.2/composer.phar
-      script: wget https://phar.phpunit.de/phpunit-6.4.3.phar && php -d browscap=$TRAVIS_BUILD_DIR/resources/browscap.ini phpunit-6.4.3.phar --coverage-text --coverage-clover=coverage.clover --colors --verbose
+      script: php -d browscap=$TRAVIS_BUILD_DIR/resources/browscap.ini vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover --colors --verbose
       after_success:
         - wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover
     - stage: check coding style
