--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -28,7 +28,9 @@
         <whitelist>
             <directory>./</directory>
             <exclude>
-                <directory>./resources/</directory>
+                <directory>./Resources/</directory>
+                <directory>./Tests</directory>
+                <directory>./vendor</directory>
             </exclude>
         </whitelist>
     </filter>
