--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ php:
 os: linux
 
 env:
-  - SYMFONY_VERSION="^2.3||^3.0||^4.0"
+  - SYMFONY_VERSION="^2.3||^3.0"
     COMPOSER_FLAGS="--prefer-lowest"
-  - SYMFONY_VERSION="^2.3||^3.0||^4.0"
+  - SYMFONY_VERSION="^2.3||^3.0"
 
 cache:
   directories:
@@ -43,14 +43,14 @@ jobs:
     - php: nightly
   include:
     - php: 5.3
-      env: SYMFONY_VERSION="^2.3||^3.0||^4.0"
+      env: SYMFONY_VERSION="^2.3||^3.0"
            COMPOSER_FLAGS="--prefer-lowest"
       dist: precise
     - php: 5.3
-      env: SYMFONY_VERSION="^2.3||^3.0||^4.0"
+      env: SYMFONY_VERSION="^2.3||^3.0"
       dist: precise
     - php: nightly
-      env: SYMFONY_VERSION="^2.3||^3.0||^4.0"
+      env: SYMFONY_VERSION="^2.3||^3.0"
            COMPOSER_FLAGS="--ignore-platform-reqs"
     - php: 7.1
       env: SYMFONY_VERSION="~2.3.0"
@@ -72,11 +72,9 @@ jobs:
       env: SYMFONY_VERSION="~3.2.0"
     - php: 7.1
       env: SYMFONY_VERSION="^3.3.0"
-    - php: 7.1
-      env: SYMFONY_VERSION="~4.0.0"
     - stage: test with coverage
       php: 7.1
-      env: SYMFONY_VERSION="^2.3||^3.0||^4.0"
+      env: SYMFONY_VERSION="^2.3||^3.0"
       before_install:
         - echo 'opcache.enable=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
         - echo 'opcache.enable_cli=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
