Remove depreacated target-dir usage

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,6 @@
         }
     },
     "autoload": {
-        "psr-0": { "Browscap\\BrowscapBundle": "" }
-    },
-    "target-dir": "Browscap/BrowscapBundle"
+        "psr-4": { "Browscap\\BrowscapBundle\\": "" }
+    }
 }
